## Tools ##

native_glib_minver = '2.2.0'
native_glib = dependency('glib-2.0',    version: '>='+native_glib_minver, native: true)
native_rsvg = dependency('librsvg-2.0', version: '>='+rsvg_minver, native: true)

subdir('tools')

## Data ##

subdir('brushes')
subdir('cursors')
subdir('icons')
subdir('patterns')
